hphp/hack/test/reserved/case_type.php
//// Foo.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Foo = int;

//// Arraykey.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Arraykey = int;

//// Bool.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Bool = int;

//// Callable.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Callable = int;

//// Classname.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Classname = int;

//// Darray.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Darray = int;

//// Dynamic.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Dynamic = int;

//// False.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type False = int;

//// Float.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Float = int;

//// Int.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Int = int;

//// Mixed.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Mixed = int;

//// Nonnull.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Nonnull = int;

//// Noreturn.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Noreturn = int;

//// Nothing.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Nothing = int;

//// Null.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Null = int;

//// Num.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Num = int;

//// Parent.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Parent = int;

//// Resource.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Resource = int;

//// Self.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Self = int;

//// Static.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Static = int;

//// String.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type String = int;

//// This.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type This = int;

//// True.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type True = int;

//// Varray.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Varray = int;

//// Void.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type Void = int;

//// _.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>
case type _ = int;
